--- a/Contact.html
+++ b/Contact.html
@@ -59,7 +59,7 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
                 <div class="u-layout-row">
                   <div class="u-container-align-center-lg u-container-align-center-md u-container-align-center-xl u-container-align-left-sm u-container-align-left-xs u-container-style u-layout-cell u-size-20-lg u-size-20-md u-size-20-xl u-size-30-sm u-size-30-xs u-layout-cell-1">
                     <div class="u-container-layout u-valign-middle u-container-layout-1">
-                      <a href="mailto:hi@car.repair.com" class="u-active-none u-align-center-lg u-align-center-md u-align-center-xl u-align-left-sm u-align-left-xs u-border-active-palette-1-base u-border-hover-white u-btn u-button-link u-button-style u-hover-none u-none u-text-active-palette-1-light-2 u-text-body-alt-color u-text-hover-palette-1-light-2 u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><span class="u-file-icon u-icon u-text-white u-icon-4"><img src="images/2099199-390ae0a7.png" alt=""></span>&nbsp;hi@car.repair.com
+                      <a href="mailto:info@bugiauto.com" class="u-active-none u-align-center-lg u-align-center-md u-align-center-xl u-align-left-sm u-align-left-xs u-border-active-palette-1-base u-border-hover-white u-btn u-button-link u-button-style u-hover-none u-none u-text-active-palette-1-light-2 u-text-body-alt-color u-text-hover-palette-1-light-2 u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><span class="u-file-icon u-icon u-text-white u-icon-4"><img src="images/2099199-390ae0a7.png" alt=""></span>&nbsp;info@bugiauto.com
                       </a>
                     </div>
                   </div>
@@ -196,22 +196,21 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
               <div class="u-container-style u-layout-cell u-size-40 u-layout-cell-2">
                 <div class="u-container-layout u-container-layout-2">
                   <div class="u-form u-form-1">
-                    <form action="https://forms.nicepagesrv.com/v2/form/process" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="email" name="form" style="padding: 10px;">
+                    <form action="mailto:info@bugiauto.com" method="post" enctype="text/plain" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" name="contact-form" style="padding: 10px;">
                       <div class="u-form-group u-form-name">
                         <label for="name-175e" class="u-label">Name</label>
-                        <input type="text" placeholder="Enter your Name" id="name-175e" name="name" class="u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle" required="">
+                        <input type="text" placeholder="Enter your Name" id="name-175e" name="Name" class="u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle" required="">
                       </div>
                       <div class="u-form-email u-form-group">
                         <label for="email-175e" class="u-label">Email</label>
-                        <input type="email" placeholder="Enter a valid email address" id="email-175e" name="email" class="u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle" required="">
+                        <input type="email" placeholder="Enter a valid email address" id="email-175e" name="Email" class="u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle" required="">
                       </div>
                       <div class="u-form-group u-form-message">
                         <label for="message-175e" class="u-label">Message</label>
-                        <textarea placeholder="Enter your message" rows="4" cols="50" id="message-175e" name="message" class="u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle" required=""></textarea>
+                        <textarea placeholder="Enter your message" rows="4" cols="50" id="message-175e" name="Message" class="u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle" required=""></textarea>
                       </div>
                       <div class="u-align-right u-form-group u-form-submit">
-                        <a href="#" class="u-active-palette-1-dark-1 u-border-none u-btn u-btn-submit u-button-style u-hover-palette-1-dark-1 u-btn-2">send a message</a>
-                        <input type="submit" value="submit" class="u-form-control-hidden">
+                        <button type="submit" class="u-active-palette-1-dark-1 u-border-none u-btn u-btn-submit u-button-style u-hover-palette-1-dark-1 u-btn-2">Send a message</button>
                       </div>
                       <div class="u-form-send-message u-form-send-success">Thank you! Your message has been sent.</div>
                       <div class="u-form-send-error u-form-send-message">Unable to send your message. Please fix errors then try again.</div>
@@ -319,7 +318,7 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
                   <div class="u-border-3 u-border-palette-1-base u-line u-line-horizontal u-line-4"></div>
                   <p class="u-align-left u-text u-text-7"><span class="u-file-icon u-icon u-text-palette-1-base"><img src="images/4.png" alt=""></span>&nbsp;​​​456 Elm St, Los Angeles, CA 90001, United States
                   </p>
-                  <p class="u-align-left u-text u-text-default u-text-8"><span class="u-file-icon u-icon u-text-palette-1-base"><img src="images/5.png" alt=""></span>&nbsp; <a href="mailto:hi@car.repair.com" class="u-active-none u-border-1 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-btn u-button-link u-button-style u-hover-none u-none u-text-active-palette-1-base u-text-body-alt-color u-text-hover-palette-1-base u-btn-12" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">hi@car.repair.com</a>
+                  <p class="u-align-left u-text u-text-default u-text-8"><span class="u-file-icon u-icon u-text-palette-1-base"><img src="images/5.png" alt=""></span>&nbsp; <a href="mailto:info@bugiauto.com" class="u-active-none u-border-1 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-btn u-button-link u-button-style u-hover-none u-none u-text-active-palette-1-base u-text-body-alt-color u-text-hover-palette-1-base u-btn-12" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">info@bugiauto.com</a>
                   </p>
                   <p class="u-align-left u-text u-text-9">
                     <a href="tel:+12345678910" class="u-active-none u-border-1 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-btn u-button-link u-button-style u-hover-none u-none u-text-active-palette-1-base u-text-body-alt-color u-text-hover-palette-1-base u-btn-13" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><span class="u-file-icon u-icon u-text-palette-1-base"><img src="images/6.png" alt=""></span>&nbsp;​+1 (234) 567-8910
@@ -342,5 +341,7 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
         </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80"></section>
-  
+  
 </body></html>
+    
+    
