--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
 	c0-7.1,5.8-12.8,12.8-12.8h44.7c7.1,0,12.8,5.8,12.8,12.8V78.4z"></path></svg></span>
               </a>
             </div>
-            <div class="data-layout-selected u-clearfix u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-gutter-0 u-layout-custom-sm u-layout-custom-xs u-layout-wrap u-layout-wrap-1">
+           <div class="data-layout-selected u-clearfix u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-gutter-0 u-layout-custom-sm u-layout-custom-xs u-layout-wrap u-layout-wrap-1">
               <div class="u-layout">
                 <div class="u-layout-row">
                   <div class="u-container-align-center-lg u-container-align-center-md u-container-align-center-xl u-container-align-left-sm u-container-align-left-xs u-container-style u-layout-cell u-size-20-lg u-size-20-md u-size-20-xl u-size-30-sm u-size-30-xs u-layout-cell-1">
                     <div class="u-container-layout u-valign-middle u-container-layout-1">
-                      <a href="mailto:info@bugiauto.com" class="u-active-none u-align-center-lg u-align-center-md u-align-center-xl u-align-left-sm u-align-left-xs u-border-active-palette-1-base u-border-hover-white u-btn u-button-link u-button-style u-hover-none u-none u-text-active-palette-1-light-2 u-text-body-alt-color u-text-hover-palette-1-light-2 u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><span class="u-file-icon u-icon u-text-white u-icon-4"><img src="images/2099199-390ae0a7.png" alt=""></span>&nbsp;info@bugimobiledetailing.com
+                      <a href="mailto:info@bugiauto.com" class="u-active-none u-align-center-lg u-align-center-md u-align-center-xl u-align-left-sm u-align-left-xs u-border-active-palette-1-base u-border-hover-white u-btn u-button-link u-button-style u-hover-none u-none u-text-active-palette-1-light-2 u-text-body-alt-color u-text-hover-palette-1-light-2 u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><span class="u-file-icon u-icon u-text-white u-icon-4"><img src="images/2099199-390ae0a7.png" alt=""></span>&nbsp;info@bugiauto.com
                       </a>
                     </div>
                   </div>
@@ -85,7 +85,7 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
                   </div>
                 </div>
               </div>
-            </div>
+            </div>
           </div>
           
           
