--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
         /* Testimonials */
         .testimonials {
             padding: 100px 0;
-            background: url('images/pricingphoto') center/cover fixed;
+            background: url('images/pricingphoto.jpg') center/cover fixed;
             position: relative;
         }
         
