--- a/Pricing-Page.html
+++ b/Pricing-Page.html
@@ -251,7 +251,7 @@
             overflow: hidden;
             display: flex;
             align-items: center;
-            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('images/sitephoto.jpg') center/cover no-repeat;
+            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('images/pricingphoto.jpg') center/cover no-repeat;
         }
         
         .hero-content {
