--- a/About.html
+++ b/About.html
@@ -818,7 +818,7 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>About Bugimobiledetailing</h1>
+                <h1>About Bugi Auto</h1>
                 <p>We focus on quality, consistency, and convenience — offering deep interior cleaning, paint correction, and ceramic coatings at your location. Our goal is simple: deliver results that speak for themselves, with service you can rely on. Clean work. Clear communication. No shortcuts.</p>
                 <a href="#contact" class="btn">Book Appointment</a>
             </div>
